# discordbot-rust

./: .gitignore  Cargo.toml  LICENSE  discord-bot.conf
src/: main.rs  utils.rs
src/constants/: mod.rs
src/groups/: mod.rs  music.rs
src/groups/music/: list.rs  mod.rs
src/structures/: guild.rs
